--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker build -t ${{ secrets.JFROG_REGISTRY }}/my-repo/my-nginx-image:latest .
-          docker push ${{ secrets.JFROG_REGISTRY }}/my-repo/my-nginx-image:latest
+          docker push ${{ secrets.JFROG_REGISTRY }}/mydemo-docker-jfrog-repo/my-nginx-image:latest
