--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,12 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        
+      - name: Check Docker status
+        run: systemctl status docker
+
+      - name: Restart Docker daemon
+        run: sudo systemctl restart docker
 
       - name: Log in to JFrog Artifactory
         run: echo "${{ secrets.JFROG_PASSWORD }}" | docker login -u "${{ secrets.JFROG_USERNAME }}" --password-stdin "${{ secrets.JFROG_REGISTRY }}"
