--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,9 +23,9 @@ jobs:
         run: sudo systemctl restart docker
 
       - name: Log in to JFrog Artifactory
-        run: echo "${{ secrets.JFROG_PASSWORD }}" | docker login -u "${{ secrets.JFROG_USERNAME }}" --password-stdin "${{ secrets.JFROG_REGISTRY }}"
+        run: echo "${{ secrets.JFROG_PASSWORD }}" | docker login -u "${{ secrets.JFROG_USERNAME }}" --password-stdin "${{ secrets.JFROG_REGISTRY }}.jfrog.io"
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.JFROG_REGISTRY }}/mytestrepo/my-nginx-image:latest .
-          docker push ${{ secrets.JFROG_REGISTRY }}/mytestrepo/my-nginx-image:latest
+          docker build -t ${{ secrets.JFROG_REGISTRY }}.jfrog.io/mytestrepo/my-nginx-image:latest .
+          docker push ${{ secrets.JFROG_REGISTRY }}.jfrog.io/mytestrepo/my-nginx-image:latest
