--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image to JFrog
+name: Build and Push Docker Image
 
 on:
   push:
@@ -15,17 +15,16 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-        
-      - name: Check Docker status
-        run: systemctl status docker
-
-      - name: Restart Docker daemon
-        run: sudo systemctl restart docker
 
       - name: Log in to JFrog Artifactory
-        run: echo "${{ secrets.JFROG_PASSWORD }}" | docker login -u "${{ secrets.JFROG_USERNAME }}" --password-stdin "${{ secrets.JFROG_REGISTRY }}"
+        env:
+          ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+          ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
+          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
+        run: echo $ARTIFACTORY_PASSWORD | docker login -u $ARTIFACTORY_USERNAME --password-stdin $ARTIFACTORY_URL
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ secrets.JFROG_REGISTRY }}/nginx-jfrog-ecr-repo/my-nginx-image:latest .
-          docker push ${{ secrets.JFROG_REGISTRY }}/nginx-jfrog-ecr-repo/my-nginx-image:latest
+      - name: Build and tag Docker image
+        run: docker build -t $ARTIFACTORY_URL/nginx:latest .
+
+      - name: Push Docker image
+        run: docker push $ARTIFACTORY_URL/nginx:latest
