--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,14 +17,14 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to JFrog Artifactory
-        env:
-          ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
-          ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
-          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
-        run: echo $ARTIFACTORY_PASSWORD | docker login -u $ARTIFACTORY_USERNAME --password-stdin $ARTIFACTORY_URL
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.ARTIFACTORY_URL }}
+          username: ${{ secrets.ARTIFACTORY_USERNAME }}
+          password: ${{ secrets.ARTIFACTORY_PASSWORD }}
 
       - name: Build and tag Docker image
-        run: docker build -t $ARTIFACTORY_URL/nginx:latest .
+        run: docker build -t ${{ secrets.ARTIFACTORY_URL }}/nginx:latest .
 
       - name: Push Docker image
-        run: docker push $ARTIFACTORY_URL/nginx:latest
+        run: docker push ${{ secrets.ARTIFACTORY_URL }}/nginx:latest
