--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Verify access with curl
+        run: curl -H "ngrok-skip-browser-warning:true" -u ${{ secrets.ARTIFACTORY_USERNAME }}:${{ secrets.ARTIFACTORY_PASSWORD }} ${{ secrets.ARTIFACTORY_URL }}/api/system/ping
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -23,8 +26,8 @@ jobs:
           username: ${{ secrets.ARTIFACTORY_USERNAME }}
           password: ${{ secrets.ARTIFACTORY_PASSWORD }}
 
-      - name: Build and tag Docker image
-        run: docker build -t ${{ secrets.ARTIFACTORY_URL }}/nginx:latest .
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.ARTIFACTORY_URL }}/my-repo/nginx:latest .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.ARTIFACTORY_URL }}/nginx:latest
+        run: docker push ${{ secrets.ARTIFACTORY_URL }}/my-repo/nginx:latest
