--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,7 +1,10 @@
-name: Build and Push Docker Image
+name: Docker CI/CD Pipeline
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
@@ -10,24 +13,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Verify access with curl
-        run: curl -H "ngrok-skip-browser-warning:true" -u ${{ secrets.ARTIFACTORY_USERNAME }}:${{ secrets.ARTIFACTORY_PASSWORD }} ${{ secrets.ARTIFACTORY_URL }}/api/system/ping
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Build Docker image
+      run: |
+        docker build -t my-nginx-image:latest .
 
-      # - name: Log in to JFrog Artifactory
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: ${{ secrets.ARTIFACTORY_URL }}
-      #     username: ${{ secrets.ARTIFACTORY_USERNAME }}
-      #     password: ${{ secrets.ARTIFACTORY_PASSWORD }}
+    - name: Save Docker image as a tar file
+      run: |
+        docker save my-nginx-image:latest -o my-nginx-image.tar
 
-      # - name: Build Docker image
-      #   run: docker build -t ${{ secrets.ARTIFACTORY_URL }}/my-repo/nginx:latest .
+    - name: Upload Docker image artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: docker-image
+        path: my-nginx-image.tar
 
-      - name: Push Docker image
-        run: curl -uadmin:${{ secrets.ARTIFACTORY_TOKEN }} -T Dockerfile "https://b8fd-111-93-244-226.ngrok-free.app/artifactory/example-repo-local/demo"
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Download Docker image artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: docker-image
+
+    - name: Push Docker image to JFrog
+      env:
+        JFROG_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
+        JFROG_URL: ${{ secrets.JFROG_URL }}
+      run: |
+        # Extract the downloaded artifact
+        tar -xvf docker-image
+
+        # Push the Docker image tar file using curl
+        curl -uadmin:${{ secrets.JFROG_PASSWORD }} -T my-nginx-image.tar "${{ secrets.JFROG_URL }}/artifactory/example-repo-local/my-nginx-image.tar"
