--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,34 +23,10 @@ jobs:
       run: |
         docker build -t my-nginx-image:latest .
 
-    - name: Save Docker image as a tar file
-      run: |
-        docker save my-nginx-image:latest -o my-nginx-image.tar
-
-    - name: Upload Docker image artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: docker-image
-        path: my-nginx-image.tar
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Download Docker image artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: docker-image
-        path: my-nginx-image.tar
-
-    - name: Push Docker image to JFrog
+    - uses: jfrog/setup-jfrog-cli@v4
       env:
-        JFROG_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
-        JFROG_URL: ${{ secrets.JFROG_URL }}
-      run: |
-        # Push the Docker image tar file using curl
-        curl -uadmin:${{ secrets.JFROG_PASSWORD }} -T my-nginx-image.tar "${{ secrets.JFROG_URL }}/artifactory/example-repo-local/my-nginx-image.tar"
+          JF_URL: ${{ vars.JFROG_URL }}
+          JF_USER: ${{ secrets.JFROG_USERNAME}}
+          JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
+      with:
+          download-repository: jfrog-cli-remote
