--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,10 +23,34 @@ jobs:
       run: |
         docker build -t my-nginx-image:latest .
 
-    - uses: jfrog/setup-jfrog-cli@v4
-      env:
-          JF_URL: ${{ vars.JFROG_URL }}
-          JF_USER: ${{ secrets.JFROG_USERNAME}}
-          JF_PASSWORD: ${{ secrets.JF_PASSWORD }}
+    - name: Save Docker image as a tar file
+      run: |
+        docker save my-nginx-image:latest -o my-nginx-image.tar
+
+    - name: Upload Docker image artifact
+      uses: actions/upload-artifact@v2
       with:
-          download-repository: jfrog-cli-remote
+        name: docker-image
+        path: my-nginx-image.tar
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Download Docker image artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: docker-image
+        path: my-nginx-image.tar
+
+    - name: Push Docker image to ARTIFACTORY
+      env:
+        ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
+        ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      run: |
+        # Push the Docker image tar file using curl
+        curl -uadmin:${{ secrets.ARTIFACTORY_PASSWORD }} -T my-nginx-image.tar "${{ secrets.ARTIFACTORY_URL }}/artifactory/example-repo-local/my-nginx-image.tar"
