--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,29 +23,29 @@ jobs:
       run: |
         docker build -t my-nginx-image:latest .
 
-    - name: Save Docker image as a tar file
-      run: |
-        docker save my-nginx-image:latest -o my-nginx-image.tar
+  #   - name: Save Docker image as a tar file
+  #     run: |
+  #       docker save my-nginx-image:latest -o my-nginx-image.tar
 
-    - name: Upload Docker image artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: docker-image
-        path: my-nginx-image.tar
+  #   - name: Upload Docker image artifact
+  #     uses: actions/upload-artifact@v2
+  #     with:
+  #       name: docker-image
+  #       path: my-nginx-image.tar
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
 
-    - name: Download Docker image artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: docker-image
-        path: my-nginx-image.tar
+  #   - name: Download Docker image artifact
+  #     uses: actions/download-artifact@v2
+  #     with:
+  #       name: docker-image
+  #       path: my-nginx-image.tar
 
     - name: Push Docker image to ARTIFACTORY
       env:
@@ -53,4 +53,4 @@ jobs:
         ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
       run: |
         # Push the Docker image tar file using curl
-        curl -uadmin:${{ secrets.ARTIFACTORY_PASSWORD }} -T my-nginx-image.tar "${{ secrets.ARTIFACTORY_URL }}/artifactory/example-repo-local/my-nginx-image.tar"
+        curl -uadmin:${{ secrets.ARTIFACTORY_PASSWORD }} -T my-nginx-image:latest "${{ secrets.ARTIFACTORY_URL }}/artifactory/example-repo-local/my-nginx-image:latest"
